# Multi-Agent-CAD-framework

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
docs/templates/: pythonocc_template.md
src/: config.py  graph.py  prompts.py  state.py
src/nodes/: architect.py  coder.py  executor.py  inspector.py
src/utils/: logger.py  throttler.py
