[project]
name = "cad-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.1",
    "docx2txt>=0.9",
    "faiss-cpu>=1.13.2",
    "flask>=3.1.2",
    "google-genai>=1.62.0",
    "hf-xet>=1.2.0",
    "ipykernel>=7.1.0",
    "jq>=1.11.0",
    "langchain>=1.2.8",
    "langchain-astradb>=1.0.0",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.0",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.7",
    "langsmith>=0.6.9",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "mistralai>=1.9.11",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pillow>=12.1.0",
    "pymupdf>=1.26.7",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.2",
    "streamlit>=1.19.0",
    "streamlit-stl>=0.0.6",
    "tiktoken>=0.12.0",
    "unstructured>=0.18.31",
    "wikipedia>=1.4.0",
]
